@@ -8,6 +8,14 @@ CONFIG_NUTTX_NEWCONFIG=y
 # Build Setup
 #
 # CONFIG_EXPERIMENTAL is not set
+# CONFIG_HOST_LINUX is not set
+# CONFIG_HOST_OSX is not set
+CONFIG_HOST_WINDOWS=y
+# CONFIG_HOST_OTHER is not set
+# CONFIG_WINDOWS_NATIVE is not set
+CONFIG_WINDOWS_CYGWIN=y
+# CONFIG_WINDOWS_MSYS is not set
+# CONFIG_WINDOWS_OTHER is not set
 
 #
 # Build Configuration
@@ -73,12 +81,24 @@ CONFIG_ARCH_CHIP_STM32=y
 CONFIG_ARCH_CORTEXM4=y
 CONFIG_ARCH_FAMILY="armv7-m"
 CONFIG_ARCH_CHIP="stm32"
+CONFIG_ARCH_HAVE_CMNVECTOR=y
+# CONFIG_ARMV7M_CMNVECTOR is not set
 # CONFIG_ARCH_FPU is not set
 CONFIG_ARCH_HAVE_MPU=y
 # CONFIG_ARMV7M_MPU is not set
-CONFIG_ARCH_IRQPRIO=y
 CONFIG_BOARD_LOOPSPERMSEC=16717
 # CONFIG_ARCH_CALIBRATION is not set
+
+#
+# ARMV7M Configuration Options
+#
+# CONFIG_ARMV7M_TOOLCHAIN_ATOLLIC is not set
+# CONFIG_ARMV7M_TOOLCHAIN_BUILDROOT is not set
+# CONFIG_ARMV7M_TOOLCHAIN_CODEREDW is not set
+CONFIG_ARMV7M_TOOLCHAIN_CODESOURCERYW=y
+# CONFIG_ARMV7M_TOOLCHAIN_DEVKITARM is not set
+# CONFIG_ARMV7M_TOOLCHAIN_GNU_EABI is not set
+# CONFIG_ARMV7M_TOOLCHAIN_RAISONANCE is not set
 # CONFIG_SERIAL_TERMIOS is not set
 
 #
@@ -88,8 +108,14 @@ CONFIG_BOARD_LOOPSPERMSEC=16717
 # CONFIG_ARCH_CHIP_STM32F100CB is not set
 # CONFIG_ARCH_CHIP_STM32F100R8 is not set
 # CONFIG_ARCH_CHIP_STM32F100RB is not set
+# CONFIG_ARCH_CHIP_STM32F100RC is not set
+# CONFIG_ARCH_CHIP_STM32F100RD is not set
+# CONFIG_ARCH_CHIP_STM32F100RE is not set
 # CONFIG_ARCH_CHIP_STM32F100V8 is not set
 # CONFIG_ARCH_CHIP_STM32F100VB is not set
+# CONFIG_ARCH_CHIP_STM32F100VC is not set
+# CONFIG_ARCH_CHIP_STM32F100VD is not set
+# CONFIG_ARCH_CHIP_STM32F100VE is not set
 # CONFIG_ARCH_CHIP_STM32F103RET6 is not set
 # CONFIG_ARCH_CHIP_STM32F103VCT6 is not set
 # CONFIG_ARCH_CHIP_STM32F103VET6 is not set
@@ -107,13 +133,6 @@ CONFIG_ARCH_CHIP_STM32F407VG=y
 # CONFIG_ARCH_CHIP_STM32F407IE is not set
 # CONFIG_ARCH_CHIP_STM32F407IG is not set
 CONFIG_STM32_STM32F40XX=y
-CONFIG_STM32_CODESOURCERYW=y
-# CONFIG_STM32_CODESOURCERYL is not set
-# CONFIG_STM32_ATOLLIC_LITE is not set
-# CONFIG_STM32_ATOLLIC_PRO is not set
-# CONFIG_STM32_DEVKITARM is not set
-# CONFIG_STM32_RAISONANCE is not set
-# CONFIG_STM32_BUILDROOT is not set
 # CONFIG_STM32_DFU is not set
 
 #
@@ -122,14 +141,14 @@ CONFIG_STM32_CODESOURCERYW=y
 # CONFIG_STM32_ADC1 is not set
 # CONFIG_STM32_ADC2 is not set
 # CONFIG_STM32_ADC3 is not set
-# CONFIG_STM32_CRC is not set
-# CONFIG_STM32_DMA1 is not set
-# CONFIG_STM32_DMA2 is not set
 # CONFIG_STM32_BKPSRAM is not set
 # CONFIG_STM32_CAN1 is not set
 # CONFIG_STM32_CAN2 is not set
 # CONFIG_STM32_CCMDATARAM is not set
+# CONFIG_STM32_CRC is not set
 # CONFIG_STM32_CRYP is not set
+# CONFIG_STM32_DMA1 is not set
+# CONFIG_STM32_DMA2 is not set
 # CONFIG_STM32_DAC1 is not set
 # CONFIG_STM32_DAC2 is not set
 # CONFIG_STM32_DCMI is not set
@@ -174,6 +193,7 @@ CONFIG_STM32_USART2=y
 #
 # Alternate Pin Mapping
 #
+# CONFIG_STM32_FLASH_PREFETCH is not set
 # CONFIG_STM32_JTAG_DISABLE is not set
 # CONFIG_STM32_JTAG_FULL_ENABLE is not set
 # CONFIG_STM32_JTAG_NOJNTRST_ENABLE is not set
@@ -181,6 +201,11 @@ CONFIG_STM32_JTAG_SW_ENABLE=y
 # CONFIG_STM32_FORCEPOWER is not set
 # CONFIG_ARCH_BOARD_STM32_CUSTOM_CLOCKCONFIG is not set
 CONFIG_STM32_CCMEXCLUDE=y
+
+#
+# U[S]ART Configuration
+#
+# CONFIG_USART2_RS485 is not set
 
 #
 # USB Host Configuration
@@ -191,7 +216,11 @@ CONFIG_STM32_CCMEXCLUDE=y
 #
 # CONFIG_ARCH_NOINTC is not set
 # CONFIG_ARCH_DMA is not set
+CONFIG_ARCH_IRQPRIO=y
+# CONFIG_CUSTOM_STACK is not set
+# CONFIG_ADDRENV is not set
 CONFIG_ARCH_STACKDUMP=y
+# CONFIG_ENDIAN_BIG is not set
 
 #
 # Board Settings
@@ -280,7 +309,6 @@ CONFIG_PREALLOC_TIMERS=4
 #
 # Stack and heap information
 #
-# CONFIG_CUSTOM_STACK is not set
 CONFIG_IDLETHREAD_STACKSIZE=1024
 CONFIG_USERMAIN_STACKSIZE=2048
 CONFIG_PTHREAD_STACK_MIN=256
@@ -316,8 +344,6 @@ CONFIG_DEV_LOWCONSOLE=y
 # CONFIG_16550_UART is not set
 CONFIG_ARCH_HAVE_USART2=y
 CONFIG_MCU_SERIAL=y
-CONFIG_STANDARD_SERIAL=y
-CONFIG_CONFIG_SERIAL_NPOLLWAITERS=2
 CONFIG_USART2_SERIAL_CONSOLE=y
 # CONFIG_NO_SERIAL_CONSOLE is not set
 
@@ -381,12 +407,15 @@ CONFIG_MM_REGIONS=2
 # Binary Formats
 #
 # CONFIG_BINFMT_DISABLE is not set
+CONFIG_BINFMT_EXEPATH=y
+CONFIG_PATH_INITIAL="/mnt/romfs"
 # CONFIG_NXFLAT is not set
 CONFIG_ELF=y
 CONFIG_ELF_ALIGN_LOG2=2
 CONFIG_ELF_STACKSIZE=2048
 CONFIG_ELF_BUFFERSIZE=128
 CONFIG_ELF_BUFFERINCR=32
+# CONFIG_PIC is not set
 CONFIG_BINFMT_CONSTRUCTORS=y
 CONFIG_SYMTAB_ORDEREDBYNAME=y
 
@@ -410,9 +439,19 @@ CONFIG_ARCH_LOWPUTC=y
 CONFIG_LIB_SENDFILE_BUFSIZE=512
 # CONFIG_ARCH_ROMGETC is not set
 # CONFIG_ARCH_OPTIMIZED_FUNCTIONS is not set
+
+#
+# Basic CXX Support
+#
+# CONFIG_C99_BOOL8 is not set
 CONFIG_HAVE_CXX=y
 # CONFIG_HAVE_CXXINITIALIZE is not set
 # CONFIG_CXX_NEWLONG is not set
+
+#
+# uClibc++ Standard C++ Library
+#
+# CONFIG_UCLIBCXX is not set
 
 #
 # Application Configuration
@@ -430,6 +469,7 @@ CONFIG_HAVE_CXX=y
 # CONFIG_EXAMPLES_CAN is not set
 # CONFIG_EXAMPLES_CDCACM is not set
 # CONFIG_EXAMPLES_COMPOSITE is not set
+# CONFIG_EXAMPLES_CXXTEST is not set
 # CONFIG_EXAMPLES_DHCPD is not set
 CONFIG_EXAMPLES_ELF=y
 CONFIG_EXAMPLES_ELF_DEVMINOR=0
@@ -440,6 +480,7 @@ CONFIG_EXAMPLES_ELF_DEVPATH="/dev/ram0"
 # CONFIG_EXAMPLES_HELLOXX is not set
 # CONFIG_EXAMPLES_JSON is not set
 # CONFIG_EXAMPLES_HIDKBD is not set
+# CONFIG_EXAMPLES_KEYPADTEST is not set
 # CONFIG_EXAMPLES_IGMP is not set
 # CONFIG_EXAMPLES_LCDRW is not set
 # CONFIG_EXAMPLES_MM is not set
@@ -494,6 +535,7 @@ CONFIG_EXAMPLES_ELF_DEVPATH="/dev/ram0"
 #
 # Networking Utilities
 #
+# CONFIG_NETUTILS_CODECS is not set
 # CONFIG_NETUTILS_DHCPC is not set
 # CONFIG_NETUTILS_DHCPD is not set
 # CONFIG_NETUTILS_FTPC is not set
